--- a/PreParcial1/index.html
+++ b/PreParcial1/index.html
@@ -25,6 +25,7 @@
     <main>
         <section class="main-image">
             <div class="img-background">
+                <img src="img/utn-alumnos.jpg">
                 <h1>Bienvenido a la Universidad Tecnológica Nacional</h1>
             </div>
 
