--- a/PreParcial1/index.html
+++ b/PreParcial1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
-        <img src="img/logo-UTN-1.png" class="logo" alt="Logo UTN">
+        <img src="img/logo-UTN-1.png" class="logo" alt="Logo UTN" alt="" width="20%">
         <nav>
             <ul>
                 <li><a href="#" class="active">Inicio</a></li>
@@ -12,7 +12,7 @@
         <div class="profile">
             <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6"
-                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                fill="none" viewBox="0 0 24 24" stroke="currentColor" alt="" width="3%">
                 <path stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655
                 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"
@@ -25,7 +25,7 @@
     <main>
         <section class="main-image">
             <div class="img-background">
-                <img src="img/utn-alumnos.jpg">
+                <img src="img/utn-alumnos.jpg" alt="" width="40%" class="alumnos" align="left">
                 <h1>Bienvenido a la Universidad Tecnológica Nacional</h1>
             </div>
 
